# cortex

./: .cortexignore  .gitignore  AGENTS.md  ARTIFACT_ADMISSION.md  Justfile  README.md  pyproject.toml
.cortex/: manifest_v0.json  spec_registry_v0.json
contracts/: agent_executor_contract_v0.md  client_onboarding_certification_scorecard_schema_v0.json  client_training_project_handoff_schema_v0.json  closeout_contract_v0.md  context_hydration_receipt_schema_v0.json  context_load_retrieval_contract_v0.md  context_load_work_graph_adapter_contract_v0.md  mistake_candidate_schema_v0.json  project_manager_agent_v0.md  project_state_boundary_contract_v0.json  project_state_boundary_contract_v0.md  promotion_contract_schema_v0.json  promotion_enforcement_contract_v0.md  rollout_mode_contract_v0.md  tactical_memory_command_family_contract_v0.md  temporal_playbook_release_surface_contract_v0.json
intake/: README.md  sources.md
operating_model/: dan_cognitive_operating_model_v0.md  multi_agent_mutation_authority_model_v0.md  overstory_alignment_layer_v0.md  swarm_runner_v0.md
philosophy/: ontology_architecture_map_v0.md  second_brain_taxonomy_aggregated_v0.md  second_brain_taxonomy_v0.md
playbooks/: agent_deploy_flow_v0.md  agent_executor_runbook_v0.md  beads_boundary_audit_v0.md  claude_meta_compare_and_agent_agnostic_reflection_plan_v0.md  claude_session_closeout_runbook_v0.md  cortex_adoption_delta_plan_v0.md  cortex_client_onboarding_training_execution_board_v0.md  cortex_client_onboarding_training_track_v0.md  cortex_coach_concurrency_hardening_plan_v0.md  (+32 more)
(+328 files in other folders)
