[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-project-coach"
version = "0.1.0"
description = "Bootstrap and maintain Cortex lifecycle artifacts across projects."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.10.0",
]

[project.scripts]
cortex-coach = "cortex_project_coach.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cortex_project_coach*"]

[tool.setuptools.package-data]
"cortex_project_coach.data" = ["*.json"]
