[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-project-coach"
version = "0.1.0"
description = "Bootstrap and maintain Cortex lifecycle artifacts across projects."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.10.0",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
]

[tool.setuptools]
py-modules = []
